modificato unità di misura margin-left
per il margin-left utilizzo % al posto di px;
colonne Aside sono larghi 25% (25% * 2 = 50%)
colonna centrale avrà 40% (i restanti 10%, per i margin-right/-left da 5% )

--- a/style.css
+++ b/style.css
@@ -35,15 +35,17 @@ main aside{
 
 
 main .sezione_main{
-  width: 45%;
+  width: 40%;
   height: 500px;
   background-color: orange;
   float:left;
-  margin-left: 40px;
+  /* margin-left: 40px; */
+  margin-left: 5%;
 }
 
 main #sezione_dx_inAlto, #sezione_dx_inBasso{
-  margin-left: 40px;
+  /* margin-left: 40px; */
+  margin-left: 5%;
   margin-bottom: 20px;
 }
 
